k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  labels:
    app: nginx-test

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-test

  template:
    metadata:
      labels:
        app: nginx-test

    spec:
      containers:
        - name: nginx
          image: harbor.azhuan.ren/sre_uat/nginx-test:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
