k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  labels:
    app: nginx-test

spec:
  type: ClusterIP

  selector:
    app: nginx-test

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
